data/manifests/artifacthub/artifact-hub/artifact-hub/014_deployment_trivy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivy
  labels:
    app.kubernetes.io/component: trivy
    helm.sh/chart: artifact-hub-1.21.0
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.21.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: trivy
      app.kubernetes.io/name: artifact-hub
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/component: trivy
        app.kubernetes.io/name: artifact-hub
        app.kubernetes.io/instance: release-name
    spec:
      containers:
      - name: trivy
        image: aquasec/trivy:0.56.1
        command:
        - trivy
        - --debug
        - --cache-dir
        - /trivy
        - server
        - --listen
        - 0.0.0.0:8081
        volumeMounts:
        - name: trivy
          mountPath: /trivy
        ports:
        - name: http
          containerPort: 8081
          protocol: TCP
      volumes:
      - name: trivy
        emptyDir: {}
