data/manifests/artifacthub/artifact-hub/artifact-hub/019_ingress_hub.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub
  labels:
    app.kubernetes.io/component: hub
    helm.sh/chart: artifact-hub-1.21.0
    app.kubernetes.io/name: artifact-hub
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.21.0
    app.kubernetes.io/managed-by: Helm
spec:
  defaultBackend:
    service:
      name: hub
      port:
        number: 80
